[package]
name = "qtextract"
version = "0.1.0"
authors = ["axstin <6193474+axstin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2.21"
goblin = "0.4.2"
libflate = "1.4.0"
regex = "1.8.4"
time = "0.3.22"
